syntax = "proto3";

package codehorse.mkube.pvc;

option go_package = "github.com/solodba/devcloud/mkube/apps/pvc";

// 导入外部包
import "common/pb/github.com/solodba/mcube/pb/meta/meta.proto";

// CreatePVCRequest结构体
message CreatePVCRequest {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"labels" json:"labels"
    repeated ListMapItem Labels = 3;
    // @gotags: bson:"accessModes" json:"accessModes"
    repeated string AccessModes = 4;
    // @gotags: bson:"capacity" json:"capacity"
    int32 Capacity = 5;
    // @gotags: bson:"selector" json:"selector"
    repeated ListMapItem Selector = 6;
    // @gotags: bson:"storageClassName" json:"storageClassName"
    string StorageClassName = 7;
}

// 通用键值对结构体
message ListMapItem {
    // @gotags: bson:"key" json:"key"
    string Key = 1;
    // @gotags: bson:"value" json:"value"
    string Value = 2;
}

// PVC结构体
message PVC {
    // @gotags: bson:",inline" json:"meta"
    codehorse.mcube.meta.Meta Meta = 1;
    // @gotags: bson:",inline" json:"pvc"
    CreatePVCRequest PVC = 2;
}

// PVCSetItem结构体
message PVCSetItem {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"labels" json:"labels"
    repeated ListMapItem Labels = 3;
    // @gotags: bson:"accessModes" json:"accessModes"
    repeated string AccessModes = 4;
    // @gotags: bson:"capacity" json:"capacity"
    int32 Capacity = 5;
    // @gotags: bson:"selector" json:"selector"
    repeated ListMapItem Selector = 6;
    // @gotags: bson:"storageClassName" json:"storageClassName"
    string StorageClassName = 7;
    // @gotags: bson:"age" json:"age"
    int64 Age = 8;
    // @gotags: bson:"status" json:"status"
    string Status = 9;
    // @gotags: bson:"volume" json:"volume"
    string Volume = 10;
}

// PVCSet结构体
message PVCSet {
    // @gotags: bson:"total" json:"total"
    int64 Total = 1;
    // @gotags: bson:"items" json:"items"
    repeated PVCSetItem Items = 2;
}